--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,5 +14,5 @@ jobs:
           svg_out_path: output/github-contribution-grid-snake.svg
       - uses: EndBug/add-and-commit@v9
         with:
-          branch: main
+          branch: master
           message: 'Update contribution snake'
