--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,13 +13,15 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: true
-          ref: master
 
       - name: Generate snake
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: "adel6-ahmed"
           outputs: "output/github-contribution-grid-snake.svg"
+
+      - name: Pull latest changes
+        run: git pull origin master --rebase
 
       - name: Push changes
         uses: stefanzweifel/git-auto-commit-action@v4
