--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,12 +8,11 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout with full history
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          persist-credentials: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0  # للحصول على كامل تاريخ git
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Generate snake
         uses: Platane/snk/svg-only@v3
@@ -21,17 +20,16 @@ jobs:
           github_user_name: "adel6-ahmed"
           outputs: "output/github-contribution-grid-snake.svg"
 
-      - name: Reset and sync branch
+      - name: Configure Git
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN || secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+
+      - name: Force sync and push
+        run: |
           git fetch origin
           git reset --hard origin/master
-
-      - name: Force push changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "Generated snake contribution graph"
-          branch: master
-          force: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          git add .
+          git commit -m "Generated snake contribution graph" --allow-empty
+          git push origin master --force
