--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write  # هذا السطر ضروري لمنح صلاحيات الكتابة
+  contents: write 
 
 jobs:
   generate:
@@ -30,5 +30,5 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN || secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
           git add .
           git commit -m "Generated snake contribution graph" --allow-empty
-          git pull --rebase origin master  # حل مشكلة الـ non-fast-forward
+          git pull --rebase origin master  
           git push origin HEAD:master --force
