--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,30 +5,25 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write 
+  contents: write
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.PERSONAL_TOKEN || secrets.GITHUB_TOKEN }}
 
-      - name: Generate snake
-        uses: Platane/snk/svg-only@v3
+      - uses: Platane/snk@v3
         with:
           github_user_name: "adel6-ahmed"
-          outputs: "output/github-contribution-grid-snake.svg"
+          outputs: "output/github-contribution-grid-snake.svg|output/github-contribution-grid-snake-dark.svg"
+          github_footer: false
 
-      - name: Force push changes
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN || secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-          git add .
-          git commit -m "Generated snake contribution graph" --allow-empty
-          git pull --rebase origin master  
-          git push origin HEAD:master --force
+      - run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add output/github-contribution-grid-snake*
+          git commit -m "Update contribution snake" || echo "No changes to commit"
+          git push
