--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,7 @@
 name: Generate Snake
 on:
   schedule:
-    - cron: "0 0 * * *"  # 12:00 AM UTC يومياً
+    - cron: "30 0 * * *"  # 12:30 AM UTC يومياً
   workflow_dispatch:
 
 permissions:
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: master  # التأكد من استخدام الفرع الصحيح
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate snake
@@ -27,16 +28,9 @@ jobs:
 
       - name: Commit and push
         run: |
-          # إعداد Git
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          
-          # إضافة الملفات
           git add snake*.svg
-          
-          # Commit التغييرات
           git commit -m "Auto-update snake graph [skip ci]" || echo "No changes to commit"
-          
-          # رفع التغييرات
           git pull --rebase origin master
           git push origin HEAD:master
