--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: master  # التأكد من استخدام الفرع الصحيح
+          ref: master
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate snake
